[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-can-analysis"
version = "0.1.0"
description = "Parser and visualization tools for POLARIS CAN dump CSV logs."
readme = "CAN_ANALYSIS_README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
polaris-can-analyze = "analyze_can_frames:main"

[tool.setuptools]
py-modules = ["analyze_can_frames"]
